The project is put in a little order. Some files wich was not needed has been deleted. Components Calendar and Weather are bound together in one state. There is added a weather forecast for 5 days. Days in wich forecast is available are marked by corresponding icons. Preload component is added with information describing current searching status.

--- a/src/index.css
+++ b/src/index.css
@@ -215,6 +215,14 @@ tr:first-child .todo__table__data_cells:nth-last-child(2) {
 
 .todo__table__data_cells {
     cursor: pointer;
+    position: relative;
+}
+
+.todo__table__sun {
+    position: absolute;
+    width: 20px;
+    right: 0;
+    top: 0;
 }
 
 .todo__table__data_choisen {
@@ -401,4 +409,11 @@ table tr:last-child td:last-child {
     position: absolute;
     left: 3px;
     top: 3px;
+}
+
+
+
+.preloader {
+    width: 25%;
+    margin: 50px auto;
 }
