--- a/src/index.css
+++ b/src/index.css
@@ -356,3 +356,70 @@ table tr:last-child td:last-child {
     width: 25%;
     margin: 50px auto;
 }
+
+
+
+
+
+.juventus {
+    width: 90%;
+    margin: 20px auto;
+    margin-top: 0;
+    border: 1px solid rgba(221, 221, 221, 1);
+    border-radius: 10px;
+    box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+    text-align: center;    
+}
+
+.juventus__header {
+    margin: 10px auto;
+}
+
+.juventus__content {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    height: 850px;
+}
+
+.juventus__paragraph {
+    font-size: 20px;
+}
+
+.juventus__team {
+    width: 50%;
+}
+
+.juventus__badge {
+    height: 50px;
+    display: block;
+    margin: 20px auto;
+    background: #000;
+}
+
+.juventus__logo {
+    max-width: 300px;
+    width: auto;
+}
+
+.juventus__jersey {
+    max-width: 300px;
+    width: auto;
+}
+
+.juventus__stadium-photo {
+    max-width: 300px;
+    width: auto;
+}
+
+.juventus__today-game {
+    width: 50%;
+    align-self: flex-start;
+    border-top: 1px solid rgba(221, 221, 221, 1);
+}
+
+.juventus__next-game {
+    width: 50%;
+    align-self: flex-start;
+    border-top: 1px solid rgba(221, 221, 221, 1);
+}
