--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,12 @@ tr:first-child .todo__table__data_cells:nth-last-child(2) {
     left: 0;
     top: 0;
 }
+.todo__table__ball {
+    position: absolute;
+    width: 15px;
+    left: 15px;
+    top: 2px;
+}
 
 .todo__table__data_choisen {
     background: bisque;
@@ -376,10 +382,10 @@ table tr:last-child td:last-child {
 }
 
 .juventus__content {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    height: 850px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr auto 1fr;
+    grid-template-areas: "juventus__team  juventus__stadium" "juventus__team  juventus__today-game" "juventus__team  juventus__next-game";
 }
 
 .juventus__paragraph {
@@ -387,7 +393,19 @@ table tr:last-child td:last-child {
 }
 
 .juventus__team {
-    width: 50%;
+    grid-area: juventus__team;
+}
+
+.juventus__stadium {
+    grid-area: juventus__stadium;
+}
+
+.juventus__today-game {
+    grid-area: juventus__today-game;
+}
+
+.juventus__next-game {
+    grid-area: juventus__next-game;
 }
 
 .juventus__badge {
@@ -413,13 +431,9 @@ table tr:last-child td:last-child {
 }
 
 .juventus__today-game {
-    width: 50%;
-    align-self: flex-start;
     border-top: 1px solid rgba(221, 221, 221, 1);
 }
 
 .juventus__next-game {
-    width: 50%;
-    align-self: flex-start;
     border-top: 1px solid rgba(221, 221, 221, 1);
 }
